deploy/overlays/uat/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsg-api
spec:
  replicas: 2
